# CMPUT382

./: .gitattributes  .gitignore  CMakeLists.txt
Convolution/: .cproject  .project  CMakeLists.txt  convolution.cu  test.cpp  tiled.cu
Convolution/Dataset/0/: input0.ppm  input1.raw  output.ppm
Convolution/Dataset/1/: input0.ppm  input1.raw  output.ppm
Convolution/Dataset/2/: input0.ppm  input1.raw  output.ppm
Convolution/Dataset/3/: input0.ppm  input1.raw  output.ppm
Convolution/Dataset/4/: input0.ppm  input1.raw  output.ppm
Convolution/Dataset/5/: input0.ppm  input1.raw  output.ppm
Convolution/Dataset/6/: input0.ppm  input1.raw  output.ppm
Convolution/Dataset/7/: input0.ppm  input1.raw  output.ppm
ExclusiveScan/: .cproject  .gitignore  .project  1d.cu  2d.cu  CMakeLists.txt  exclusive_scan.cu  exclusive_scan.h  main.cu
ExclusiveScan/Dataset/0/: input.raw  output.raw
ExclusiveScan/Dataset/1/: input.raw
ExclusiveScan/Dataset/2/: output.raw
ExclusiveScan/Dataset/2D/1/: output.raw
ExclusiveScan/Dataset/2D/10/: input.raw  output.raw
ExclusiveScan/Dataset/2D/11/: input.raw  output.raw
ExclusiveScan/Dataset/2D/2/: input.raw
ExclusiveScan/Dataset/2D/3/: input.raw
ExclusiveScan/Dataset/2D/4/: input.raw
ExclusiveScan/Dataset/2D/5/: output.raw
ExclusiveScan/Dataset/2D/6/: input.raw
ExclusiveScan/Dataset/2D/7/: input.raw
ExclusiveScan/Dataset/2D/8/: input.raw
ExclusiveScan/Dataset/3/: output.raw
ExclusiveScan/Dataset/4/: output.raw
ExclusiveScan/Dataset/5/: input.raw
ExclusiveScan/Dataset/7/: output.raw
ExclusiveScan/Dataset/8/: output.raw
ExclusiveScan/Dataset/9/: input.raw  output.raw
ExclusiveScan/Dataset/Exclusive/0/: input.raw  output.raw
MatrixMultiplication/: .cproject  .gitignore  .project  CMakeLists.txt  cpu.cpp  gpu_mul.cu  opt_mul.cu
MatrixMultiplication/Dataset/0/: input0.raw  input1.raw  output.raw
MatrixMultiplication/Dataset/1/: input0.raw  input1.raw  output.raw
MatrixMultiplication/Dataset/2/: input0.raw  input1.raw  output.raw
MatrixMultiplication/Dataset/3/: input0.raw  input1.raw  output.raw
MatrixMultiplication/Dataset/4/: input0.raw  input1.raw  output.raw
MatrixMultiplication/Dataset/5/: input0.raw  input1.raw  output.raw
MatrixMultiplication/Dataset/6/: input0.raw  input1.raw  output.raw
MatrixMultiplication/Dataset/7/: input0.raw  input1.raw  output.raw
MatrixMultiplication/Dataset/8/: input0.raw  input1.raw  output.raw
MatrixMultiplication/Dataset/9/: input0.raw  input1.raw  output.raw
ParallelMerge/: .cproject  .project  CMakeLists.txt  main.cu
ParallelMerge/Dataset/0/: input0.raw  input1.raw  output.raw
ParallelMerge/Dataset/1/: input0.raw  input1.raw  output.raw
ParallelMerge/Dataset/10/: input0.raw  input1.raw  output.raw
ParallelMerge/Dataset/11/: input0.raw  input1.raw  output.raw
ParallelMerge/Dataset/12/: input0.raw  input1.raw  output.raw
ParallelMerge/Dataset/13/: input0.raw  input1.raw  output.raw
ParallelMerge/Dataset/14/: input0.raw  input1.raw  output.raw
ParallelMerge/Dataset/15/: input0.raw  input1.raw  output.raw
ParallelMerge/Dataset/16/: input0.raw  input1.raw  output.raw
ParallelMerge/Dataset/17/: input0.raw  input1.raw  output.raw
ParallelMerge/Dataset/18/: input0.raw  input1.raw  output.raw
ParallelMerge/Dataset/19/: input0.raw  input1.raw  output.raw
ParallelMerge/Dataset/2/: input0.raw  input1.raw  output.raw
ParallelMerge/Dataset/3/: input0.raw  input1.raw  output.raw
ParallelMerge/Dataset/4/: input0.raw  input1.raw  output.raw
ParallelMerge/Dataset/5/: input0.raw  input1.raw  output.raw
ParallelMerge/Dataset/6/: input0.raw  input1.raw  output.raw
ParallelMerge/Dataset/7/: input0.raw  input1.raw  output.raw
ParallelMerge/Dataset/8/: input0.raw  input1.raw  output.raw
ParallelMerge/Dataset/9/: input0.raw  input1.raw  output.raw
ParallelMerge/Release/: ParallelMerge  makefile  subdir.mk
ParallelMerge/Release/libwb/: subdir.mk
ParallelMerge/libwb/: CMakeLists.txt
libwb/: wb.h  (+17 more)
(+198 files in other folders)
